# sshmirror

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  pytest_output.txt  sshmirror.config.example.yml
.github/instructions/: version-tracking.instructions.md
.github/skills/version-control/: SKILL.md
.github/skills/version-control/assets/: pending-changes.md
.github/workflows/: publish.yml
sshmirror/: __init__.py  _version.py  cli.py  config.py  prompts.py  sshmirror.py
sshmirror/core/: exceptions.py  filemap.py  filewatcher.py  schemas.py  utils.py
tests/: test_sshmirror_smoke.py
