[build-system]
requires = ['setuptools>=68', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'sshmirror'
version = '0.1.18'
description = 'SSH directory synchronization library and CLI'
requires-python = '>=3.11'
license = 'MIT'
dynamic = ['readme']
authors = [
    { name = 'FellowCode' },
]
keywords = ['ssh', 'sync', 'deployment', 'cli', 'remote-files', 'project-management']
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Software Development :: Version Control',
    'Topic :: System :: Networking',
    'Topic :: Utilities',
]
dependencies = [
    'aiofiles',
    'aioshutil',
    'asyncssh',
    'beartype',
    'pydantic',
    'PyYAML',
    'questionary',
    'rich',
]

[project.urls]
Homepage = 'https://github.com/FellowCode/sshmirror'
Repository = 'https://github.com/FellowCode/sshmirror'
Issues = 'https://github.com/FellowCode/sshmirror/issues'
Changelog = 'https://github.com/FellowCode/sshmirror/blob/main/CHANGELOG.md'

[project.scripts]
sshmirror = 'sshmirror.cli:main'

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
readme = { file = ['README.md', 'CHANGELOG.md'], content-type = 'text/markdown' }

[tool.setuptools.packages.find]
include = ['sshmirror', 'sshmirror.*']